make style sheet url change

--- a/shop.html
+++ b/shop.html
@@ -7,7 +7,7 @@
     <title>KAVEH Masoudinia</title>
     <link rel="stylesheet" href="style.css" />
 
-    <link rel="stylesheet" href="/css/all.min.css" />
+    <link rel="stylesheet" href="./css/all.min.css" />
   </head>
   <body>
     <section id="header">
@@ -32,7 +32,9 @@
         </div>
         <div class="cart">
           <h2 class="cart-title">your cart</h2>
-          <div class="cart-content"></div>
+          <div class="cart-content">
+              <div class="cart-body" id="cart-body"></div>
+          </div>
 
           <div class="total">
             <div class="total-title">Total</div>
