--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <title>KAVEH Masoudinia</title>
     <link rel="stylesheet" href="style.css" />
 
-    <link rel="stylesheet" href="/css/all.min.css" />
+    <link rel="stylesheet" href="./css/all.min.css" />
   </head>
   <body>
     <section id="header">
