change purcese sildbar js to count click on product

--- a/shop.html
+++ b/shop.html
@@ -54,37 +54,37 @@
           <img src="img/pro 1.jpg" alt="" class="product-img" />
           <h4 class="proo-title">Male Black T_Shirt</h4>
           <h4 class="price">4$</h4>
-          <a href="#"><i class="fa-solid fa-cart-plus add-cart"></i></a>
+          <button onclick="addCartClick('Male Black T_Shirt', '4$', 'img/pro 1.jpg')"><i class="fa-solid fa-cart-plus"></i></button>
         </div>
         <div class="pro">
           <img src="img/pro 2.jpg" alt="" class="product-img" />
           <h4 class="proo-title">Female Black T_Shirt</h4>
           <h4 class="price">4.5$</h4>
-          <a href="#"><i class="fa-solid fa-cart-plus add-cart"></i></a>
+          <button onclick="addCartClick('Female Black T_Shirt', '4.5$', 'img/pro 2.jpg')"><i class="fa-solid fa-cart-plus"></i></button>
         </div>
         <div class="pro">
           <img src="img/pro 3.jpg" alt="" class="product-img" />
           <h4 class="proo-title">Male Pink T_Shirt</h4>
           <h4 class="price">3$</h4>
-          <a href="#"><i class="fa-solid fa-cart-plus add-cart"></i></a>
+          <button onclick="addCartClick('Male Pink T_Shirt', '3$', 'img/pro 3.jpg')"><i class="fa-solid fa-cart-plus"></i></button>
         </div>
         <div class="pro">
           <img src="img/pro 4.jpg" alt="" class="product-img" />
           <h4 class="proo-title">Female White T_Shirt</h4>
           <h4 class="price">3$</h4>
-          <a href="#"><i class="fa-solid fa-cart-plus add-cart"></i></a>
+          <button onclick="addCartClick('Female White T_Shirt', '3$', 'img/pro 4.jpg')"><i class="fa-solid fa-cart-plus"></i></button>
         </div>
         <div class="pro">
           <img src="img/pro 5.jpg" alt="" class="product-img" />
           <h4 class="proo-title">Female jeans</h4>
           <h4 class="price">3$</h4>
-          <a href="#"><i class="fa-solid fa-cart-plus add-cart"></i></a>
+          <button onclick="addCartClick('Female jeans', '3$', 'img/pro 5.jpg')"><i class="fa-solid fa-cart-plus"></i></button>
         </div>
         <div class="pro">
           <img src="img/pro 6.jpg" alt="" class="product-img" />
           <h4 class="proo-title">male jeans</h4>
           <h4 class="price">3$</h4>
-          <a href="#"><i class="fa-solid fa-cart-plus add-cart"></i></a>
+          <button onclick="addCartClick('male jeans', '3$', 'img/pro 6.jpg')"><i class="fa-solid fa-cart-plus"></i></button>
         </div>
       </div>
     </section>
